tests/baselines/reference/unicodeExtendedEscapesInStrings21(target=es6).errors.txt
//// [tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings21.ts] ////

unicodeExtendedEscapesInStrings21.ts(1,15): error TS1199: Unterminated Unicode escape sequence.


==== unicodeExtendedEscapesInStrings21.ts (1 errors) ====
    var x = "\u{67";
                  
!!! error TS1199: Unterminated Unicode escape sequence.
    